# mix_T

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: bench_end_to_end.py  bench_loop_vs_vectorized.py
notebooks/: diagonal_covariance_demo.ipynb
src/studenttmixture/: .em_student_mixture.py.swp  .optimized_mstep_functions.pyx.swp  .utilities.py.swp  .variational_student_mixture.py.swp  _backend.py  em_student_mixture.py  mixture_base_class.py  utilities.py
tests/: .unittest_c_extensions.py.swp  .unittest_finite_mix.py.swp  .unittest_variational_mix.py.swp  test_diagonal_hypothesis.py  test_em_mixture.py  test_gpu_equivalence.py  test_utilities.py  test_variational_mix.py
